Indentation TOUTES LES PAGES

--- a/Events.html
+++ b/Events.html
@@ -1,156 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Events</title>
-    <link rel="stylesheet" type="text/css" href="Css/MainCss.css">
-    <link href='https://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
+    <head>
+        <meta charset="UTF-8">
+        <title>Evénements</title>
+        <!--LIEN CSS-->
+        <link rel="stylesheet" href="css/maincss.css">
+        <!--LIEN TYPOS-->
+        <link href='https://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet' type='text/css'>
+        <!--LIEN FAVICON-->
+        <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="author" content="Projet ISI : HTML5" />
+        <meta name="description" content="lucha libre, catch, mexique, luchiadore, lutteur" />
+        <meta name="robots" content="index" />
 
-</head>
-<body id="Events">
-<header>
-    <a href="Index.html"><img src="Image/logo-solo.png"></a>
-    <nav>
-        <ul>
-            <li><a href="gallerie_lutteur.html">Luchadores</a></li>
-            <li><a href="Events.html">Eventos</a></li>
-            <li><a href="contacts.html">Contacto</a></li>
-            <li><a href="infos.html">Info</a></li>
-        </ul>
-    </nav>
-</header>
-<main>
-                                       <!--premier tableau de la page events-->
-<!-- Table header -->
-<table class="group">
-    <caption>Principal Evento del Mes</caption>
-<thead>
-<tr>
-    <th scope="col" ><p>Masked Mania</p></th>
-</tr>
-</thead>
-<!-- Table footer -->
-<tfoot>
-<tr>
-    <td><p><a href="Index.html">Ver el Video</a></p></td>
-</tr>
-</tfoot>
-<!-- Table body -->
-<tbody>
-<tr>
-    <td><img src="Image/FMLL-8-9-15-flyer.jpg" alt="Masked Mania"></td>
-</tr>
-<tr>
-    <td><p>Lucha Libre , que se traduce vagamente a "Free Fight" en Inglés , combina acción , color, mística y generaciones de tradición de presentar un producto que no se ve en la corriente principal de lucha libre americana.</p></td>
-</tr>
-</tbody>
-</table>
+        <!--/****VERSIONS ANTERIEURES IE9****/-->
+        <!--<link rel="stylesheet" href="css/fixe.css"/>-->
+        <!--[if lt IE 9]>
+        <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+        <![endif]-->
+    </head>
+    <body id="Events">
+        <header>
+            <a href="index.html"><img src="image/logo-solo.png"></a>
+            <nav>
+                <ul>
+                    <li><a href="gallerie_lutteur.html">Luchadores</a></li>
+                    <li><a href="events.html">Eventos</a></li>
+                    <li><a href="contacts.html">Contacto</a></li>
+                    <li><a href="infos.html">Info</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+                                               <!--premier tableau de la page events-->
+        <!-- Table header -->
+            <table class="group">
+                <caption>Principal Evento del Mes</caption>
+                <thead>
+                    <tr>
+                        <th scope="col" ><p>Masked Mania</p></th>
+                    </tr>
+                </thead>
+            <!-- Table footer -->
+                <tfoot>
+                    <tr>
+                        <td><p><a href="index.html">Ver el Video</a></p></td>
+                    </tr>
+                </tfoot>
+            <!-- Table body -->
+                <tbody>
+                    <tr>
+                        <td><img src="image/FMLL-8-9-15-flyer.jpg" alt="Masked Mania"></td>
+                    </tr>
+                    <tr>
+                        <td><p>Lucha Libre , que se traduce vagamente a "Free Fight" en Inglés , combina acción , color, mística y generaciones de tradición de presentar un producto que no se ve en la corriente principal de lucha libre americana.</p></td>
+                    </tr>
+                </tbody>
+            </table>
 
-                                       <!----------------------------premier tableau de la page events------------------------>
+                                               <!----------------------------premier tableau de la page events------------------------>
 
-                                       <table class="group">
-    <caption>Principal Evento del Mes</caption>
-    <thead>
-    <tr>
-        <th scope="col" ><p>Lucha Underground</p></th>
-    </tr>
-    </thead>
-    <!-- Table footer -->
-    <tfoot>
-    <tr>
-        <td><p><a href="Index.html">Ver el Video</a></p></td>
-    </tr>
-    </tfoot>
-    <!-- Table body -->
-    <tbody>
-    <tr>
-        <td><img src="Image/HWP-11-9-14-flyer.jpg" alt="Masked Mania"></td>
-    </tr>
-    <tr>
-        <td><p>La historia de la Lucha mexicana está entrelazada  de México, los medios de comunicación y el entretenimiento en general. Su siguiente, en México se ha convertido en el deporte más popular después del fútbol en un país .</p></td>
-    </tr>
-    </tbody>
-</table>
-                                       <!---------------------------premier tableau de la page events--------------------->
+            <table class="group">
+                <caption>Principal Evento del Mes</caption>
+                <thead>
+                    <tr>
+                        <th scope="col" ><p>Lucha Underground</p></th>
+                    </tr>
+                </thead>
+            <!-- Table footer -->
+                <tfoot>
+                    <tr>
+                        <td><p><a href="index.html">Ver el Video</a></p></td>
+                    </tr>
+                </tfoot>
+            <!-- Table body -->
+                <tbody>
+                    <tr>
+                        <td><img src="image/HWP-11-9-14-flyer.jpg" alt="Masked Mania"></td>
+                    </tr>
+                    <tr>
+                        <td><p>La historia de la Lucha mexicana está entrelazada  de México, los medios de comunicación y el entretenimiento en general. Su siguiente, en México se ha convertido en el deporte más popular después del fútbol en un país .</p></td>
+                    </tr>
+                </tbody>
+            </table>
+                                               <!---------------------------premier tableau de la page events--------------------->
 
-                                       <table class="group">
-    <caption>Principal Evento del Mes</caption>
-    <thead>
-    <tr>
-        <th scope="col" ><p>Full Contact Wrestling</p></th>
-    </tr>
-    </thead>
-    <!-- Table footer -->
-    <tfoot>
-    <tr>
-        <td><p><a href="Index.html">Ver el Video</a></p></td>
-    </tr>
-    </tfoot>
-    <!-- Table body -->
-    <tbody>
-    <tr>
-        <td><img src="Image/FCW-LA.jpg" alt="Masked Mania" ></td>
-    </tr>
-    <tr>
-        <td><p>público estadounidense a los de alto vuelo se mueve, explosivos de la lucha libre. Una antigua tradición de combate, ver como el bien y el mal hacer la guerra en un campo de batalla valiente llamado "El Templo" estadounidense.</p></td>
-    </tr>
-    </tbody>
-</table>
-                                       <!-------------------premier tableau de la page events--------------------------->
+            <table class="group">
+                <caption>Principal Evento del Mes</caption>
+                <thead>
+                    <tr>
+                        <th scope="col" ><p>Full Contact Wrestling</p></th>
+                    </tr>
+                </thead>
+                <!-- Table footer -->
+                <tfoot>
+                    <tr>
+                        <td><p><a href="index.html">Ver el Video</a></p></td>
+                    </tr>
+                </tfoot>
+                <!-- Table body -->
+                <tbody>
+                    <tr>
+                        <td><img src="image/FCW-LA.jpg" alt="Masked Mania" ></td>
+                    </tr>
+                    <tr>
+                        <td><p>público estadounidense a los de alto vuelo se mueve, explosivos de la lucha libre. Una antigua tradición de combate, ver como el bien y el mal hacer la guerra en un campo de batalla valiente llamado "El Templo" estadounidense.</p></td>
+                    </tr>
+                </tbody>
+            </table>
+                                               <!-------------------premier tableau de la page events--------------------------->
 
-                                       <table class="group">
-    <caption>Principal Evento del Mes</caption>
-    <thead>
-    <tr>
-        <th scope="col" ><p>Steel Cage</p></th>
-    </tr>
-    </thead>
-    <!-- Table footer -->
-    <tfoot>
-    <tr>
-        <td><p><a href="Index.html">Ver el Video</a></p></td>
-    </tr>
-    </tfoot>
-    <!-- Table body -->
-    <tbody>
-    <tr>
-        <td><img src="Image/lucha-libre-pro-wrestling-11.14.15.jpg" alt="Masked Mania" ></td>
-    </tr>
-    <tr>
-        <td><p> del viernes noche de la pelea en la Arena México. Este local de larga data en el centro de Ciudad de México es el lugar para ver uno de los eventos deportivos más estridentes y dramáticos del país estadounidense, la lucha libre.</p></td>
-    </tr>
-    </tbody>
-</table>
+            <table class="group">
+                <caption>Principal Evento del Mes</caption>
+                <thead>
+                    <tr>
+                        <th scope="col" ><p>Steel Cage</p></th>
+                    </tr>
+                </thead>
+                <!-- Table footer -->
+                <tfoot>
+                    <tr>
+                        <td><p><a href="index.html">Ver el Video</a></p></td>
+                    </tr>
+                </tfoot>
+                <!-- Table body -->
+                <tbody>
+                    <tr>
+                        <td><img src="image/lucha-libre-pro-wrestling-11.14.15.jpg" alt="Masked Mania" ></td>
+                    </tr>
+                    <tr>
+                        <td><p> del viernes noche de la pelea en la Arena México. Este local de larga data en el centro de Ciudad de México es el lugar para ver uno de los eventos deportivos más estridentes y dramáticos del país estadounidense, la lucha libre.</p></td>
+                    </tr>
+                </tbody>
+            </table>
+        </main>
 
-</main>
-<!--texte de la page events -->
-<aside>
-    <p>Events</p>
-</aside>
+    <!--texte de la page events -->
+        <aside>
+            <p>Events</p>
+        </aside>
 
-<footer>
-    <nav>
-        <ul> <!--HYPERLIENS-->
-            <li><a href="gallerie_lutteur.html">Luchadores</a></li>
-            <li><a href="Events.html">Eventos</a></li>
-            <li><a href="Index.html">Index</a></li>
-            <li><a href="contacts.html">Contacto</a></li>
-            <li><a href="#">Info</a></li>
-        </ul>
+        <footer>
+            <nav>
+                <ul> <!--HYPERLIENS-->
+                    <li><a href="gallerie_lutteur.html">Luchadores</a></li>
+                    <li><a href="events.html">Eventos</a></li>
+                    <li><a href="index.html">Index</a></li>
+                    <li><a href="contacts.html">Contacto</a></li>
+                    <li><a href="infos.html">Info</a></li>
+                </ul>
 
-        <div> <!--ADRESSE-->
-            <p>11612 Calle San Javier</p>
-            <p>Collinia San Pedro CP 64390</p>
-            <p>Zacatecas, ZAC</p>
-        </div>
+                <div> <!--ADRESSE-->
+                    <p>11612 Calle San Javier</p>
+                    <p>Collinia San Pedro CP 64390</p>
+                    <p>Zacatecas, ZAC</p>
+                </div>
 
-        <ul> <!--RESEAUX SOCIAUX-->
-            <li><a href="https://fr-ca.facebook.com/"><img src="image/facebook.png" alt="facebook"/></a></li>
-            <li><a href="https://www.google.ca/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=google"><img src="image/google.png" alt="google"/></a></li>
-            <li><a href="https://www.youtube.com/?hl=fr&gl=CA"><img src="image/youtube.png" alt="youtube"/></a></li>
-            <li><a href="https://twitter.com/?lang=fr"><img src="image/twitter.png" alt="twitter"/></a></li>
-        </ul>
-    </nav>
-</footer>
-</body>
+                <ul> <!--RESEAUX SOCIAUX-->
+                    <li><a href="https://fr-ca.facebook.com/"><img src="image/facebook.png" alt="facebook"/></a></li>
+                    <li><a href="https://www.google.ca/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=google"><img src="image/google.png" alt="google"/></a></li>
+                    <li><a href="https://www.youtube.com/?hl=fr&gl=CA"><img src="image/youtube.png" alt="youtube"/></a></li>
+                    <li><a href="https://twitter.com/?lang=fr"><img src="image/twitter.png" alt="twitter"/></a></li>
+                </ul>
+            </nav>
+        </footer>
+    </body>
 </html>
