--- a/infos.html
+++ b/infos.html
@@ -2,24 +2,38 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Accueil</title>
-        <link rel="stylesheet" type="text/css" href="Css/MainCss.css">
+        <title>Informations</title>
+        <!--LIEN CSS-->
+        <link rel="stylesheet" href="css/maincss.css">
+        <!--LIEN TYPOS-->
         <link href='https://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet' type='text/css'>
+        <!--LIEN FAVICON-->
+        <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="author" content="Projet ISI : HTML5" />
+        <meta name="description" content="lucha libre, catch, mexique, luchiadore, lutteur" />
+        <meta name="robots" content="index" />
+
+        <!--/****VERSIONS ANTERIEURES IE9****/-->
+        <!--<link rel="stylesheet" href="css/fixe.css"/>-->
+        <!--[if lt IE 9]>
+        <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+        <![endif]-->
     </head>
+
     <body id="infos">
-    <header>
-        <a href="Index.html"><img src="Image/logo-solo.png"></a>
-        <nav>
-            <ul>
-                <li><a href="gallerie_lutteur.html">Luchadores</a></li>
-                <li><a href="Events.html">Eventos</a></li>
-                <li><a href="contacts.html">Contacto</a></li>
-                <li><a href="infos.html">Info</a></li>
-            </ul>
-        </nav>
-    </header>
+        <header>
+            <a href="index.html"><img src="image/logo-solo.png"></a>
+            <nav>
+                <ul>
+                    <li><a href="gallerie_lutteur.html">Luchadores</a></li>
+                    <li><a href="events.html">Eventos</a></li>
+                    <li><a href="contacts.html">Contacto</a></li>
+                    <li><a href="infos.html">Info</a></li>
+                </ul>
+            </nav>
+        </header>
 
         <!--main-->
         <main>
@@ -28,7 +42,7 @@
                 <div>
                     <ul> <!--ORGA 1-->
                         <li>
-                            <img src="Image/tibo.jpg" alt="photo_thibaut">
+                            <img src="image/tibo.jpg" alt="photo_thibaut">
                             <p>
                                 <strong>Tibao Del Fuego</strong>
                                 <span>Vamos a la playa, ombre !</span>
@@ -37,7 +51,7 @@
                     </ul>
                     <ul><!--ORGA 2-->
                         <li>
-                            <img src="Image/pat.jpg" alt="photo_pat">
+                            <img src="image/pat.jpg" alt="photo_pat">
                             <p>
                                 <strong>El Conejo</strong>
                                 <span>Callate cabron !</span>
@@ -46,7 +60,7 @@
                     </ul>
                     <ul><!--ORGA 3-->
                         <li>
-                            <img src="Image/mo.jpg" alt="photo_mo">
+                            <img src="image/mo.jpg" alt="photo_mo">
                             <p>
                                 <strong>Constrictor</strong>
                                 <span>Che passa ?</span>
@@ -63,10 +77,10 @@
             <nav>
                 <ul> <!--HYPERLIENS-->
                     <li><a href="gallerie_lutteur.html">Luchadores</a></li>
-                    <li><a href="Events.html">Eventos</a></li>
-                    <li><a href="Index.html">Index</a></li>
+                    <li><a href="events.html">Eventos</a></li>
+                    <li><a href="index.html">Index</a></li>
                     <li><a href="contacts.html">Contacto</a></li>
-                    <li><a href="#">Info</a></li>
+                    <li><a href="infos.html">Info</a></li>
                 </ul>
 
                 <div> <!--ADRESSE-->
