--- a/gallerie_lutteur.html
+++ b/gallerie_lutteur.html
@@ -2,18 +2,33 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html">
     <head>
         <meta charset="UTF-8">
-        <title>Gallerie Luchador</title>
-        <link rel="stylesheet" type="text/css" href="Css/MainCss.css">
+        <title>Gallerie des lutteurs</title>
+        <!--LIEN CSS-->
+        <link rel="stylesheet" href="css/maincss.css">
+        <!--LIEN TYPOS-->
         <link href='https://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet' type='text/css'>
+        <!--LIEN FAVICON-->
+        <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="author" content="Projet ISI : HTML5" />
+        <meta name="description" content="lucha libre, catch, mexique, luchiadore, lutteur" />
+        <meta name="robots" content="index" />
+
+        <!--/****VERSIONS ANTERIEURES IE9****/-->
+        <!--<link rel="stylesheet" href="css/fixe.css"/>-->
+        <!--[if lt IE 9]>
+        <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+        <![endif]-->
     </head>
+
     <body id="bck_lutteurs">
         <header>
-            <a href="Index.html"><img src="Image/logo-solo.png"></a>
+            <a href="index.html"><img src="image/logo-solo.png"></a>
             <nav>
                 <ul>
                     <li><a href="gallerie_lutteur.html">Luchadores</a></li>
-                    <li><a href="Events.html">Eventos</a></li>
+                    <li><a href="events.html">Eventos</a></li>
                     <li><a href="contacts.html">Contacto</a></li>
                     <li><a href="infos.html">Info</a></li>
                 </ul>
@@ -25,37 +40,37 @@
 
             <ul>
                 <li>
-                    <img src="Image/luchador1.png" alt="luchador1"/>
+                    <img src="image/luchador1.png" alt="luchador1"/>
                     <h2>STUKA EL GALLO</h2>
                     <a href="details_luchador_1.html">Click para ver la ficha completo</a>
                 </li>
 
                 <li>
-                    <img src="Image/luchador2.png" alt="luchador2"/>
+                    <img src="image/luchador2.png" alt="luchador2"/>
                     <h2>MALO CASAS</h2>
                     <a href="details_luchador_2.html">Click para ver la ficha completo</a>
                 </li>
 
                 <li>
-                    <img src="Image/luchador3.png" alt="luchador3"/>
+                    <img src="image/luchador3.png" alt="luchador3"/>
                     <h2>SANGRE AZTECA</h2>
                     <a href="details_luchador_3.html">Click para ver la ficha completo</a>
                 </li>
 
                 <li>
-                    <img src="Image/luchador4.png" alt="luchador4"/>
+                    <img src="image/luchador4.png" alt="luchador4"/>
                     <h2>AVERNO</h2>
                     <a href="details_luchador_4.html">Click para ver la ficha completo</a>
                 </li>
 
                 <li>
-                    <img src="Image/luchador5.png" alt="luchador5"/>
+                    <img src="image/luchador5.png" alt="luchador5"/>
                     <h2>MEPHISTO</h2>
                     <a href="details_luchador_5.html">Click para ver la ficha completo</a>
                 </li>
 
                 <li>
-                    <img src="Image/luchador6.png" alt="luchador6"/>
+                    <img src="image/luchador6.png" alt="luchador6"/>
                     <h2>GALLO LOCO</h2>
                     <a href="details_luchador_6.html">Click para ver la ficha completo</a>
                 </li>
@@ -66,18 +81,16 @@
 
             <audio autoplay src="music/mexican.wav" />
 
-
-
         </main>
 
         <footer>
             <nav>
                 <ul> <!--HYPERLIENS-->
                     <li><a href="gallerie_lutteur.html">Luchadores</a></li>
-                    <li><a href="Events.html">Eventos</a></li>
-                    <li><a href="Index.html">Index</a></li>
+                    <li><a href="events.html">Eventos</a></li>
+                    <li><a href="index.html">Index</a></li>
                     <li><a href="contacts.html">Contacto</a></li>
-                    <li><a href="#">Info</a></li>
+                    <li><a href="infos.html">Info</a></li>
                 </ul>
 
                 <div> <!--ADRESSE-->
